# Shohih

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  main.cpp  shohih.cpp  shohih_server.cpp
src/board/: CMakeLists.txt  board.cpp
src/game/: game.cpp  gui_manager.cpp
src/include/: bishop.h  board.h  client.h  game.h  gui_manager.h  king.h  knight.h  pawn.h  piece.h  queen.h  rook.h  server.h  shohih_defs.h
src/network/: client.cpp  server.cpp
src/piece/: CMakeLists.txt  bishop.cpp  king.cpp  knight.cpp  pawn.cpp  piece.cpp  queen.cpp  rook.cpp
test/: CMakeLists.txt  main.cpp  test_shohih_defs.cpp
test/board/: test_board.cpp
test/common/: test_shohih_defs.cpp
test/game/: test_gui_manager.cpp
test/gtest/: CMakeLists.txt
test/network/: test_client.cpp  test_server.cpp
test/piece/: test_bishop.cpp  test_king.cpp  test_knight.cpp  test_pawn.cpp  test_piece_utils.cpp  test_piece_utils.h  test_queen.cpp  test_rook.cpp
